mobile alignments issues fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,15 @@ img{
     font-size: 3rem;
     font-family: 'Noto Serif', serif;
 }
+/* medium screen */
+@media only screen and (max-width: 768px){
+    .banner-title{
+        font-size: 3rem;
+    }
+    .full-height{
+        height: fit-content !important;
+    }
+    .section-title{
+        font-size: 2.5rem;
+    }
+}
